@@ -1,8 +1,9 @@
 package com.buy01.media.infrastructure.security;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
@@ -22,34 +23,39 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     }
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, 
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
             FilterChain filterChain) throws ServletException, java.io.IOException {
-        
+
         String authHeader = request.getHeader("Authorization");
-        
+
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
             String token = authHeader.substring(7);
-            
+
             try {
                 if (jwtUtil.validateToken(token)) {
                     String userId = jwtUtil.extractUserId(token);
                     String email = jwtUtil.extractEmail(token);
                     String role = jwtUtil.extractRole(token);
-                    
+
                     UserPrincipal principal = new UserPrincipal(userId, email, role);
-                    
-                    UsernamePasswordAuthenticationToken authentication = 
-                            new UsernamePasswordAuthenticationToken(principal, null, Collections.emptyList());
-                    
+
+                    // Map role to Spring Security authority
+                    var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role.toUpperCase()));
+
+                    UsernamePasswordAuthenticationToken authentication
+                            = new UsernamePasswordAuthenticationToken(principal, null, authorities);
+
                     SecurityContextHolder.getContext().setAuthentication(authentication);
                 }
             } catch (Exception e) {
                 // Token validation failed, continue without authentication
             }
         }
-        
+
         filterChain.doFilter(request, response);
     }
 
-    public record UserPrincipal(String id, String email, String role) {}
+    public record UserPrincipal(String id, String email, String role) {
+
+    }
 }
